Update tesis with robotics reference framework

--- a/references.bib
+++ b/references.bib
@@ -171,6 +171,85 @@
     note = {\url{https://www.genesis-systems.com/blog/robots-automotive-manufacturing-top-6-applications}},
 }
 
+@book{cite_craig_robotics,
+    title = {Introduction to Robotics: Mechanics and Control (3rd Edition)},
+    author = {John J. Craig},
+    isbn = {978-0201543612},
+    series = {Third Edition},
+    year = {2004},
+    publisher = {Pearson Education},
+    keywords = {robotics},
+    note = {\url{https://www.amazon.com/Introduction-Robotics-Mechanics-Control-3rd/dp/0201543613}}
+}
+
+@book{cite_barrientos_robotics_book,
+    title = {Fundamentos de robótica},
+    author = {Antonio Barrientos and Luis Felipe Peñín and Carlos Balaguer},
+    isbn = {8448156366, 9788448156367},
+    series = {Second Edition},
+    year = {2007},
+    publisher = {McGraw-Hill},
+    keywords = {robotics},
+    note = {\url{https://books.google.com.co/books/about/Fundamentos_de_rob\%C3\%B3tica.html?id=ArEMPAAACAAJ&redir_esc=y}}
+}
+
+@book{cite_wheeled_robots_autonomous_book,
+    title = {Wheeled Mobile Robotics From Fundamentals Towards Autonomous Systems},
+    author = {Gregor Klančar and Andrej Zdešar and Sašo Blažič and Igor Škrjanc},
+    isbn = {978-0-12-804204-5},
+    series = {},
+    year = {2017},
+    publisher = {Elsevier Inc},
+    keywords = {robotics},
+    note = {\url{https://www.sciencedirect.com/book/9780128042045/wheeled-mobile-robotics#book-info}}
+}
+
+@article{cite_robots_for_collaboration_with_human_operators,
+    author = {Edward, J. and Wannasuphoprasit, Witaya and Peshkin, Michael},
+    year = {1999},
+    month = {03},
+    pages = {},
+    title = {Cobots: Robots For Collaboration With Human Operators},
+    note = {\url{https://www.researchgate.net/publication/2808147_Cobots_Robots_For_Collaboration_With_Human_Operators}}
+}
+
+@misc{cite_rethink_robotics_official_page, 
+    title={Rethink Robotics Meets German Engineering},
+    author="{Rethink Robotics}",
+    year={2020},
+    note={\url{https://www.rethinkrobotics.com}}
+}
+
+@misc{cite_sdk_baxter_rethink_robotics, 
+    title={Baxter Research Robot Wiki},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Home}}
+}
+
+@misc{cite_youtube_baxter_robot_future_employee, 
+    title={Baxter robot is the employee for the future},
+    author="{Tlife - Rethink Robotics}",
+    year={2016},
+    note={\url{https://www.youtube.com/watch?v=Jex9eYC8QBQ}}
+}
+
+@misc{cite_baxter_joint_names_from_sdk_wiki, 
+    title={Baxter Research Robot Hardware Specifications},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Hardware_Specifications}}
+}
+
+@misc{cite_baxter_workspace_from_sdk_wiki, 
+    title={Baxter Research Robot Workspace Guidelines},
+    author="{Rethink Robotics}",
+    year={2015},
+    note={\url{https://sdk.rethinkrobotics.com/wiki/Workspace_Guidelines}}
+}
+
+
+
 
 
 
